Add main content

--- a/public/index.html
+++ b/public/index.html
@@ -37,17 +37,17 @@
           <div class="text-center">
             <p class="text-uppercase text-space text-lg">
               <strong>Jakub Nowakowski</strong>
-              <br />Freelance graphic designer
+              <br>Freelance graphic designer
             </p>
             <hr />
             <p>
               <strong>Logo is my specialty, but I don't stop there, I also do:</strong>
-              <br /><br />
+              <br><br>
               branding packages, business cards, leaflets, posters, banners,
               stickers, many varieties of packaging, vehicle wrap designs,
               web designs,social media designs, CD/Vinyl and other music designs,
               sketches, photo retouch, photo manipulations, clothing, visualizations
-              <br /><strong>and much more!</strong>
+              <br><strong>and much more!</strong>
             </p>
             <hr />
             <p>
@@ -107,10 +107,148 @@
       </div>
       <div class="section-content">
         <div id="what-logo" class="container">
-          Logo
+          <h3 class="title title-bar">Logo</h3>
+          <div class="content content-format">
+            <p>Prepare design according to client brief and reference images. Logo design includes:</p>
+            <ul class="list list-bullets">
+              <li>Horizontal and vertical composition</li>
+              <li>Additional monochrome and achromatic versions</li>
+              <li>Files in raster format (JPG, PNG) and vector format (PDF, EPS)</li>
+            </ul>
+          </div>
+          <div class="content content-format">
+            <p><strong>Starter package: from £100</strong></p>
+            <ul class="list list-bullets">
+              <li>Horizontal and vertical composition</li>
+              <li>Additional monochrome and achromatic versions</li>
+              <li>Files in raster format (JPG, PNG) and vector format (PDF, EPS)</li>
+            </ul>
+          </div>
+          <div class="content content-format">
+            <p><strong>Starter package: from £100</strong></p>
+            <ul class="list list-bullets">
+              <li>One revision to one chosen logo from two versions (slight modification of shapes, change of colors, fonts)</li>
+            </ul>
+          </div>
+          <div class="content content-format">
+            <p><strong>Basic package: from £200</strong></p>
+            <ul class="list list-bullets">
+              <li>Unlimited number of revisions to one chosen logo from three versions (slight modification of shapes, change of colors, fonts)</li>
+              <li>Business card design</li>
+            </ul>
+          </div>
+          <div class="content content-format">
+            <p><strong>Company package: from £350</strong></p>
+            <ul class="list list-bullets">
+              <li>Unlimited number of revisions to one chosen logo from four versions (slight modification of shapes, change of colors, fonts)</li>
+              <li>Design of business card, compliment slip, letterhead, envelope and folder</li>
+            </ul>
+          </div>
+          <div class="content content-format">
+            <p><strong>Team crest/mascot logo: from £200</strong></p>
+            <ul class="list list-bullets">
+              <li>Preparation of one project according to the client's brief and reference images, plus an unlimited number of revisions is included in the price (slight modification of shapes, change of colors, fonts)</li>
+            </ul>
+          </div>
+          <div class="content content-format">
+            <p><strong>Recreation of an existing logo: from £30</strong></p>
+            <p>Additional informations:</p>
+            <ul class="list list-bullets">
+              <li>Prices do not include the purchase of fonts</li>
+              <li>In the case of exceeding the threshold of amendments, or much wider edition of the project, these modifications will be calculated at an hourly rate</li>
+            </ul>
+          </div>
+          <h3 class="title title-bar">Brand Book</h3>
+          <div class="content content-format">
+            <p>Price: from £300<br>Preparation of the brand book includes:</p>
+            <ul class="list list-bullets">
+              <li><strong>Meaning of the symbol</strong> – an explanation of the logo design vision, its meaning, and how the brand character is emphasized</li>
+              <li><strong>Construction of the logo</strong> – technical representation of the creation of the logo</li>
+              <li><strong>Protective field of the logo</strong> – indicating a free area around the logo so that it remains legible and attractive to the audience</li>
+              <li><strong>Colour scheme of the logo</strong> – the precise colors used in the logo</li>
+              <li><strong>Examples of logo usage</strong> – visualizations of materials on which the brand logo will be eventually placed</li>
+            </ul>
+          </div>
         </div>
         <div id="what-sm-format" class="container container-backdrop">
-          Small Format
+          <h3 class="title title-bar">Small Format</h3>
+          <div class="content content-format">
+            <p>
+              <strong>Business card (one-sided/double-sided):</strong> from £25<br>
+              <strong>Compliment slip:</strong> from £25<br>
+              <strong>Leterhead:</strong> from £25<br>
+              <strong>Envelope:</strong> from £25<br>
+              <strong>Folder:</strong> from £50<br>
+              <strong>Small stationery package:</strong> from £70 (business card, compliment slip and letterhead)<br>
+              <strong>Large stationery package:</strong> from £140 (business card, compliment slip, letterhead, envelope and folder)<br>
+              <br>
+              <strong>One-sided leaflet (up to A4 size):</strong> from £40<br>
+              <strong>Double-sided leaflet (up to A4 size):</strong> from £55<br>
+              <strong>Folding leaflet (up to A5 size):</strong> from £80<br>
+              <strong>Brochure (up to A5 size):</strong> from £100 (price depends on number of pages)<br>
+              <strong>Magazine/book:</strong> from £150 (price depends on number of pages)<br>
+              <strong>Loyalty card (one-sided/double-sided):</strong> from £25<br>
+              <strong>Gift voucher (one-sided/double-sided):</strong> from £25<br>
+              <strong>Invitation (one-sided/double-sided):</strong> from £25<br>
+              <strong>Invitation (folding):</strong> from £40<br>
+              <strong>Greeting card (one-sided/double-sided):</strong> from £25<br>
+              <strong>Greeting card (folding):</strong> from £40<br>
+              <strong>One-sided menu (up to A4 size):</strong> from £80<br>
+              <strong>Double-sided menu (up to A4 size):</strong> from £100<br>
+              <strong>Folding menu (up to A5 size):</strong> from £140<br>
+              <strong>Sticker:</strong> from £25<br>
+              <strong>Label:</strong> from £25<br>
+              <strong>Packaging:</strong> from £150
+            </p>
+          </div>
+        </div>
+        <div id="what-lg-format" class="container">
+          <h3 class="title title-bar">Large Format</h3>
+          <div class="content content-format">
+            <p>
+              <strong>Poster (A4-A3 size):</strong> from £40<br>
+              <strong>Poster (from A2 size):</strong> from £55<br>
+              <strong>Ad banner/flags:</strong> from £70<br>
+              <strong>Roll-up banner:</strong> from £70<br>
+              <strong>Pop-up banner:</strong> from £70<br>
+              <strong>Board/billboard:</strong> from £100<br>
+              <strong>Shop fronts:</strong> from £100<br>
+              <strong>Pavement sign:</strong> from £70<br>
+              <strong>One-sided menu (from A3 size):</strong> from £100<br>
+              <strong>Double-sided menu (from A3 size):</strong> from £125<br>
+              <strong>Folding menu (from A4 size):</strong> from £160<br>
+              <strong>Graphics for a small vehicle (lettering):</strong> from £100<br>
+              <strong>Graphics for a small vehicle (lettering and partial wrap):</strong> from £135<br>
+              <strong>Graphics for a small vehicle (full wrap):</strong> from £170<br>
+              <strong>Graphics for a large vehicle (lettering):</strong> from £125<br>
+              <strong>Graphics for a large vehicle (lettering and partial wrap):</strong> from £165<br>
+              <strong>Graphics for a large vehicle (full wrap):</strong> from £200
+            </p>
+          </div>
+        </div>
+        <div id="what-other" class="container container-backdrop">
+          <h3 class="title title-bar">Other</h3>
+          <div class="content content-format">
+            <p>
+              <strong>Graphics for social media:</strong> from £30<br>
+              <strong>Email footer:</strong> from £20<br>
+              <strong>Graphic designer hourly rate:</strong> £20<br>
+            </p>
+            <ul class="list list-bullets">
+              <li>The above prices cover the initial project only, any subsequent changes will be calculated at an hourly rate</li>
+              <li>Prepared projects are fully ready for printing</li>
+            </ul>
+          </div>
+          <h3 class="title title-bar">Non-Listed Services</h3>
+          <div class="content content-format">
+            <p>
+              Due to the fact that the range of graphic designs is large,
+              it is not possible to present everything on the above list,
+              therefore, in the absence of services in the price list,
+              <strong>please contact me</strong> for information and pricing of your order.<br>
+              Projects are priced individually after getting acquainted with its details.
+            </p>
+          </div>
         </div>
       </div>
     </main>
