Update content and text formatting

--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
         <div id="what-logo" class="container">
           <h3 class="title title-bar">Logo</h3>
           <div class="content content-format">
-            <p>Prepare design according to client brief and reference images. Logo design includes:</p>
+            <p>Prepare design according to client brief and reference images.<br>Logo design includes:</p>
             <ul class="list list-bullets">
               <li>Horizontal and vertical composition</li>
               <li>Additional monochrome and achromatic versions</li>
@@ -117,41 +117,33 @@
             </ul>
           </div>
           <div class="content content-format">
-            <p><strong>Starter package: from £100</strong></p>
+            <p><strong>Starter package:</strong> from £100</p>
             <ul class="list list-bullets">
-              <li>Horizontal and vertical composition</li>
-              <li>Additional monochrome and achromatic versions</li>
-              <li>Files in raster format (JPG, PNG) and vector format (PDF, EPS)</li>
+              <li>One revision to one chosen logo from two versions <br>(slight modification of shapes, change of colors, fonts)</li>
             </ul>
           </div>
           <div class="content content-format">
-            <p><strong>Starter package: from £100</strong></p>
+            <p><strong>Basic package:</strong> from £200</p>
             <ul class="list list-bullets">
-              <li>One revision to one chosen logo from two versions (slight modification of shapes, change of colors, fonts)</li>
-            </ul>
-          </div>
-          <div class="content content-format">
-            <p><strong>Basic package: from £200</strong></p>
-            <ul class="list list-bullets">
-              <li>Unlimited number of revisions to one chosen logo from three versions (slight modification of shapes, change of colors, fonts)</li>
+              <li>Unlimited number of revisions to one chosen logo from three versions <br>(slight modification of shapes, change of colors, fonts)</li>
               <li>Business card design</li>
             </ul>
           </div>
           <div class="content content-format">
-            <p><strong>Company package: from £350</strong></p>
+            <p><strong>Company package:</strong> from £350</p>
             <ul class="list list-bullets">
-              <li>Unlimited number of revisions to one chosen logo from four versions (slight modification of shapes, change of colors, fonts)</li>
+              <li>Unlimited number of revisions to one chosen logo from four versions <br>(slight modification of shapes, change of colors, fonts)</li>
               <li>Design of business card, compliment slip, letterhead, envelope and folder</li>
             </ul>
           </div>
           <div class="content content-format">
-            <p><strong>Team crest/mascot logo: from £200</strong></p>
+            <p><strong>Team crest/mascot logo:</strong> from £200</p>
             <ul class="list list-bullets">
-              <li>Preparation of one project according to the client's brief and reference images, plus an unlimited number of revisions is included in the price (slight modification of shapes, change of colors, fonts)</li>
+              <li>Preparation of one project according to the client's brief and reference images, plus an unlimited number of revisions is included in the price <br>(slight modification of shapes, change of colors, fonts)</li>
             </ul>
           </div>
           <div class="content content-format">
-            <p><strong>Recreation of an existing logo: from £30</strong></p>
+            <p><strong>Recreation of an existing logo:</strong> from £30</p>
             <p>Additional informations:</p>
             <ul class="list list-bullets">
               <li>Prices do not include the purchase of fonts</li>
@@ -160,7 +152,7 @@
           </div>
           <h3 class="title title-bar">Brand Book</h3>
           <div class="content content-format">
-            <p>Price: from £300<br>Preparation of the brand book includes:</p>
+            <p><strong>Price:</strong> from £300<br>Preparation of the brand book includes:</p>
             <ul class="list list-bullets">
               <li><strong>Meaning of the symbol</strong> – an explanation of the logo design vision, its meaning, and how the brand character is emphasized</li>
               <li><strong>Construction of the logo</strong> – technical representation of the creation of the logo</li>
@@ -174,24 +166,24 @@
           <h3 class="title title-bar">Small Format</h3>
           <div class="content content-format">
             <p>
-              <strong>Business card (one-sided/double-sided):</strong> from £25<br>
+              <strong>Business card (one/double-sided):</strong> from £25<br>
               <strong>Compliment slip:</strong> from £25<br>
               <strong>Leterhead:</strong> from £25<br>
               <strong>Envelope:</strong> from £25<br>
               <strong>Folder:</strong> from £50<br>
-              <strong>Small stationery package:</strong> from £70 (business card, compliment slip and letterhead)<br>
-              <strong>Large stationery package:</strong> from £140 (business card, compliment slip, letterhead, envelope and folder)<br>
+              <strong>Small stationery package:</strong> from £70 <br>(business card, compliment slip and letterhead)<br>
+              <strong>Large stationery package:</strong> from £140 <br>(business card, compliment slip, letterhead, envelope and folder)<br>
               <br>
               <strong>One-sided leaflet (up to A4 size):</strong> from £40<br>
               <strong>Double-sided leaflet (up to A4 size):</strong> from £55<br>
               <strong>Folding leaflet (up to A5 size):</strong> from £80<br>
               <strong>Brochure (up to A5 size):</strong> from £100 (price depends on number of pages)<br>
               <strong>Magazine/book:</strong> from £150 (price depends on number of pages)<br>
-              <strong>Loyalty card (one-sided/double-sided):</strong> from £25<br>
-              <strong>Gift voucher (one-sided/double-sided):</strong> from £25<br>
-              <strong>Invitation (one-sided/double-sided):</strong> from £25<br>
+              <strong>Loyalty card (one/double-sided):</strong> from £25<br>
+              <strong>Gift voucher (one/double-sided):</strong> from £25<br>
+              <strong>Invitation (one/double-sided):</strong> from £25<br>
               <strong>Invitation (folding):</strong> from £40<br>
-              <strong>Greeting card (one-sided/double-sided):</strong> from £25<br>
+              <strong>Greeting card (one/double-sided):</strong> from £25<br>
               <strong>Greeting card (folding):</strong> from £40<br>
               <strong>One-sided menu (up to A4 size):</strong> from £80<br>
               <strong>Double-sided menu (up to A4 size):</strong> from £100<br>
@@ -277,17 +269,14 @@
           <h3 class="title title-bar">Get In Touch</h3>
           <div class="content content-format">
             <p>
-              Przykladowy tekst ale opis mozna dodac czegos na zasadzie
-              by wysylac dane na maila itp w cenu wyceny i tym podobne,
-              a ze wiele teraz nie wymysleto bedzie on powielony i tyle,
-              elo benc.Tak jak już wspomniałem wcześniej, jest to
-              przykladowy tekst ale opis mozna dodac czegos na zasadzie
-              by wysylac dane na maila itp w cenu wyceny i tym podobne,
-              a ze wiele teraz nie wymysle to bedzie on powielony i tyle,
-              elo benc. Przykladowy tekst ale opis mozna dodac czegos na
-              zasadzie by wysylac dane na maila itpw cenu wyceny i tym
-              podobne, a ze wiele teraz nie wymysle to bedzie on powielony
-              i tyle, elo benc.
+              In order to make the cooperation more efficient and satisfactory, 
+              please send an email with all the necessary materials, descriptions 
+              of styles, typefaces, colour palettes, etc., to further illustrate 
+              your vision of your dream project.
+              <br>After the initial quote and deadline estimation, an deposit is 
+              required depending on the total cost of the service.
+              <br>Once the project is completed and fully approved, the remainder 
+              of the estimated costs must be paid before the files are uploaded.
             </p>
           </div>
           <div class="contact-links">
