--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Judyn Graff Studio | judyngraff.co.uk</title>
     <meta name="description" content="Judyn Graff is a Glasgow based freelance graphic designer and illustrator. He specializes in creating unique and eye-catching designs for print and web." />
+    <link rel="icon" href="favicon.png">
     <link href="normalize.css" rel="stylesheet" />
     <link href="typefaces.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
